Fixing collapse

--- a/src/styles/base/components/collapse.scss
+++ b/src/styles/base/components/collapse.scss
@@ -6,3 +6,7 @@
     @include transition(height);
   }
 }
+
+.ReactCollapse--collapse {
+  @include transition(height);
+}
